--- a/src/Visao/Alterar/AlterarClassificacao.form
+++ b/src/Visao/Alterar/AlterarClassificacao.form
@@ -129,7 +129,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Aterar Classifica&#xe7;&#xe3;o"/>
+            <Property name="text" type="java.lang.String" value="Alterar Classifica&#xe7;&#xe3;o"/>
           </Properties>
         </Component>
       </SubComponents>
